--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,10 @@
   
       
   <div class="container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
 
-  <%= render "layouts/footer" %>
+    <%= render "layouts/footer" %>
     
   </div>
 
