--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,10 +5,10 @@
         <%= link_to "Create New Recipe", new_recipe_path, class: "btn btn-default btn-warning" %>
       </div>
       <div class="nav_item">
-        <%= link_to "link 1", "", class: "btn btn-default btn-warning" %>
+        <%= link_to "LINK", "", class: "btn btn-default btn-warning" %>
       </div>
       <div class="nav_item">
-        <%= link_to "link 1", "", class: "btn btn-default btn-warning" %>
+        <%= link_to "LINK", "", class: "btn btn-default btn-warning" %>
       </div>
     </div>
   </header>
