--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,16 +17,16 @@
   </div>
   <div class="col-lg-4">
     <h3 class="midrow">
-      View Recipes as Guest User
+      TITLE
     </h3>
-    <h2 class="left">Browse and view recipes as guest and Sign up later</h2>
-    <p><%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %></p>
+    <h2 class="left">DESCRIPTION</h2>
+    <p><%= link_to "LINK", "", class: "btn btn-warning btn-small" %></p>
   </div>
   <div class="col-lg-4">
     <h3 class="midrow">
-      View Recipes as Guest User
+      TITLE
     </h3>
-    <h2 class="left">Browse and view recipes as guest and Sign up later</h2>
-    <p><%= link_to "Browse Recipe Listings", "", class: "btn btn-warning btn-small" %></p>
+    <h2 class="left">DESCRIPTION</h2>
+    <p><%= link_to "LINK", "", class: "btn btn-warning btn-small" %></p>
   </div>
 </div>
