--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,6 @@
-$navbar-default-bg: #312312;
-$light-orange: #ff8c00;
-$navbar-default-color: $light-orange;
+$navbar-default-bg: #0A000F;
+$dark-purple: #0A000F;
+$navbar-default-color: $dark-purple;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -19,12 +19,33 @@ $navbar-default-color: $light-orange;
 }
   
 #logo:hover {
-  color:white;
+  color: #ADADAD;
   text-decoration: none;
+
 }
 
 body {
   padding-top: 80px;
+}
+
+.navbutton {
+  background-color: $dark-purple;
+  color: #fff;
+}
+
+.navbutton:hover {
+  background-color: $dark-purple;
+  color: #ADADAD;
+}
+
+.loginbut {
+  background-color: $dark-purple !important;
+  color: #fff;
+}
+
+.loginbut:hover {
+  background-color: $dark-purple !important;
+  color: #ADADAD;
 }
 
 .nav_item {
@@ -52,7 +73,7 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
-}
+} 
 
 h2 {
   font-size: 1.2em;
@@ -83,6 +104,13 @@ h2 {
 
 .well {
   background-color: #ededed;
+  padding-bottom: 30px;
+}
+
+.well-desc {
+  background-color: #ededed;
+  padding: 25px 25px 25px 25px;
+  border: 1px solid black;
 }
 
 input, textarea, select, .uneditable-input {
@@ -108,5 +136,55 @@ span.picture {
 }
 
 .show_recipe {
-  margin: 10px 10px 10px 10px;
+  margin-bottom: 15px;
+}
+
+table {
+  border-spacing: 10px;
+}
+
+.review {
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+td {
+  vertical-align: top;
+  padding: 5px;
+}
+
+.shortrow {
+  width: 125px; 
+}
+
+.longrow {
+  width: 350px;
+}
+
+.chefname {
+  font-size: 3.5em;
+  text-align: left;
+}
+
+.recname {
+  font-size: 1em;
+  text-align: left;
+}
+
+.jumbotron {
+  height: 400px;
+  width: 100%;
+  background-image: image-url("cookingfood2.jpg");
+  background-position: 50% 23%;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+}
+
+.jumbo-text {
+  background-color: rgba(0,0,0,.65);
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  border: 1px solid #DBDBDB;
 }
