--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,36 +1,30 @@
-<%= render 'shared/page_title', title: "Chef: " + @chef.chefname %>
+<%= render 'shared/page_title', title: @chef.chefname %>
 
-<div class="row">
-  <div class="col-md-4 col-md-offset-4 center">
-      <%= gravatar_for @chef, size: 200 %>
-      <hr/>
-  </div>
-</div>
-  
-<div class="row">
-  <div class="col-md-4 col-md-offset-4 center">
-    <h3><em>Recipes:</em></h3>  
-    <%= will_paginate @recipes %>
-  </div>
-</div>
-
-<% @recipes.each do |recipe| %>
+<div class="container">
   <div class="row">
-    <div class="col-lg-6 well col-lg-offset-3">
-      <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
-      <p><%= recipe.summary %></p>
-      <p>
-        <span class="quiet"><small> Created: <%= time_ago_in_words(recipe.created_at) %> ago</small></span>
-        <span class="quiet pull-right"><small> Updated: <%= time_ago_in_words(recipe.updated_at) %> ago</small></span>
-      </p>
-      <div class="pull-right">
-        <%= link_to like_recipe_path(recipe, like: true), method: :post do %>
-          <i class="glyphicon glyphicon-thumbs-up"></i> &nbsp <%= recipe.thumbs_up_total %>
-        <% end %> &nbsp&nbsp&nbsp&nbsp
-        <%= link_to like_recipe_path(recipe, like: false), method: :post do %> 
-          <i class="glyphicon glyphicon-thumbs-down"></i> &nbsp <%= recipe.thumbs_down_total %>
-        <% end %>
+    <div class="col-md-3">
+        <%= gravatar_for @chef, size: 250 %>
+      <div>
+        <h5><%= link_to "Return to Chefs Listing", chefs_path, class: "btn btn-warning btn-small" %></h5>
+        <h5><%= link_to "Return to Recipes Listing", recipes_path, class: "btn btn-warning btn-small" %></h5>
       </div>
     </div>
+    <table><th style="font-size: 2em;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All Recipes</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th><th><%= will_paginate @recipes %></th>
+    </table>
+    
+  <% @recipes.each do |recipe| %>
+    <div class="col-md-9 pull-right">
+      <div class="well">  
+        <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
+          <p><%= recipe.summary %></p>
+          <p>
+            <span class="quiet"><small> Created: <%= time_ago_in_words(recipe.created_at) %> ago<br/></small></span>
+            <span class="quiet"><small> Updated: <%= time_ago_in_words(recipe.updated_at) %> ago</small></span>
+          </p>
+      </div>
+    </div>
+  <% end %>
   </div>
-<% end %>
+</div>
+
+  
