--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,9 +1,9 @@
-  <header class="navbar navbar-fixed-top navbar-inverse">
+  <header class="navbar navbar-fixed-top navbar-default">
     <div class="container">
-      <%= link_to "myRecipes", root_path, class: "btn btn-lg btn-success", id: "logo" %>
+      <%= link_to "myRecipes", root_path, class: "btn btn-lg", id: "logo" %>
       <ul class="nav_ul_item">
-        <li class="dropdown">
-            <%= link_to '#', class: "btn btn-default btn-danger dropdown-toggle", "data-toggle" => "dropdown" do %>
+        <div class="dropdown">
+            <%= link_to '#', class: "btn dropdown-toggle navbutton", "data-toggle" => "dropdown" do %>
               Styles <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
@@ -19,11 +19,11 @@
                   </li>
                 <% end %>
             </ul>
-          </li>
+          </div>
       </ul>
       <ul class="nav_ul_item">
-        <li class="dropdown">
-            <%= link_to '#', class: "btn btn-default btn-danger dropdown-toggle", "data-toggle" => "dropdown" do %>
+        <div class="dropdown">
+            <%= link_to '#', class: "btn dropdown-toggle navbutton", "data-toggle" => "dropdown" do %>
               Ingredients <b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
@@ -39,16 +39,16 @@
                   </li>
                 <% end %>
             </ul>
-          </li>
+          </div>
       </ul>
 
       <% if logged_in? %>
         <div class="nav_item">
-          <%= link_to "New Recipe", new_recipe_path, class: "btn btn-default btn-warning" %>
+          <%= link_to "New Recipe", new_recipe_path, class: "btn btn-default btn-success" %>
         </div>
         
-        <ul class="nav_item">
-          <li class="dropdown">
+        <ul class="nav_item pull-right">
+          <div class="dropdown">
             <%= link_to '#', class: "btn btn-default btn-danger dropdown-toggle", "data-toggle" => "dropdown" do %>
               <%= current_user.chefname %> <b class="caret"></b>
             <% end %>
@@ -58,11 +58,14 @@
               <li class="divider"></li>
               <li><%= link_to "Logout", logout_path %></li>
             </ul>
-          </li>
+          </div>
         </ul>
       <% else %>
-        <div class="nav_item">
-          <%= link_to "Log in", login_path, class: "btn btn-default btn-success" %>
+        <div class="nav_item navbutton pull-right">
+          <%= link_to "Login", login_path, class: "btn navbutton" %>
+        </div>
+        <div class="nav_item navbutton pull-right">
+          <%= link_to "Join", register_path, class: "btn navbutton" %>
         </div>
       <% end %>
       
