--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,32 +1,27 @@
-<div class="center jumbotron">
-  <h1>Welcome to MyRecipes App</h1>
-  
-  <h2>
-    This is the home page for the Professional Ruby on Rails Developer Course on Udemy.
-  </h2>
-  
-  <%= link_to "Sign up now", register_path, class: "btn btn-lg btn-success" %>
+<div class="center jumbotron img-responsive">
+  <div class="jumbo-text">
+    <h1>Welcome to MyRecipes App</h1>
+    <h2 style="color: white">
+      This is the home page for the Professional Ruby on Rails Developer Course on Udemy.
+    </h2>
+    <%= link_to "Sign up now", register_path, class: "btn btn-lg btn-success" %>
+  </div>
 </div>
-<div class"row">
-  <div class="col-lg-4">
+
+<div class="row">
+  <div class="col-lg-6">
     <h3 class="midrow">
       View Recipes as Guest User
     </h3>
-    <h2 class="left">Browse and view recipes as guest and Sign up later</h2>
-    <p><%= link_to "Browse Recipe Listings", recipes_path, class: "btn btn-warning btn-small" %></p>
+    <p class="left">Browse and view recipes, styles, ingredients and chefs as a guest user.</p>
+    <p><%= link_to "Browse Recipe Listings", recipes_path, class: "btn btn-danger btn-small" %></p>
   </div>
-  <div class="col-lg-4">
+  <div class="col-lg-6">
     <h3 class="midrow">
       Sign In
     </h3>
-    <h2 class="left">Add/update your recipes, create reviews, like/dislike recipes and much much more!</h2>
-    <p><%= link_to "Login", login_path, class: "btn btn-warning btn-small" %></p>
-  </div>
-  <div class="col-lg-4">
-    <h3 class="midrow">
-      TITLE
-    </h3>
-    <h2 class="left">DESCRIPTION</h2>
-    <p><%= link_to "LINK", "", class: "btn btn-warning btn-small" %></p>
+    <p class="left">Add recipes, create reviews, like/dislike recipes and more!</p>
+    <p><%= link_to "Login", login_path, class: "btn btn-danger btn-small" %></p>
   </div>
 </div>
+
