--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,44 +1,123 @@
 <%= render 'shared/page_title', title: @recipe.name %>
+<div class="container">
+  <div class="row">
+    
+    <div class="col-md-5 pull-right">
+      <div class="well-desc">
+        <table>
+          <tr>
+            <td class="shortrow"><strong>Chef:</strong></td>
+            <td class="longrow">
+              <strong class="center"><%= @recipe.chef.chefname.downcase.capitalize %></strong><br/>
+              <%= link_to gravatar_for(@recipe.chef, size: 85), chef_path(@recipe.chef) %><br/>
+            </td>
+          </tr>
+          
+          <tr>
+            <td class="shortrow"><strong>Summary:</strong></td>
+            <td class="longrow"><%= @recipe.summary %></td>
+          </tr>
+          
+          <tr>
+            <% if @recipe.styles.any? %>
+            <td class="shortrow">
+              <strong>Styles:</strong>
+            </td>
+            <td class="longrow"><% @recipe.styles.each do |style| %>
+                  &bull; <%= link_to style.name, style %> 
+                <% end %> &bull;
+            </td>
+            <% end %>
+          </tr>
 
-<div class="row">
-  <div class="col-md-4 pull-right center">
-    <%= link_to gravatar_for(@recipe.chef, size: 200), chef_path(@recipe.chef) %>
-    <p>
-      <h5>Brought to you by: <%= @recipe.chef.chefname %></h5>
-    </p>
-  </div>
-  <div class="col-md-8">
-    <% if logged_in? and (@recipe.chef == current_user || current_user.admin?) %>
-      <%= link_to "Edit this Recipe", edit_recipe_path(@recipe), class: "btn btn-success pull-right" %>
-    <% end %>
-    <% if logged_in? and current_user.admin? %>
-      <%= link_to "[Delete Recipe]", @recipe, method: :delete, data: { confirm: "Are you sure?" } %>
-    <% end %>
-    <h3><%= @recipe.summary %></h3>
-    <div class="show_recipe">
-      <%= image_tag(@recipe.picture.url, class: "gravatar") if @recipe.picture? %>
-    </div>
-    <div class="well">
-      <% if @recipe.styles.any? %>
-        <p>Styles: <%= render @recipe.styles %></p>
-      <% end %>
-      <% if @recipe.ingredients.any? %>
-      <p>Ingredients: <%= render @recipe.ingredients %></p>
-      <% end %>
-      <p>
-        <strong>Steps: </strong>
-      </p>
-      <%= simple_format(@recipe.description) %>
-      <div class="pull-right">
-        <%= link_to like_recipe_path(@recipe, like: true), method: :post do %>
-          <i class="glyphicon glyphicon-thumbs-up"></i> &nbsp <%= @recipe.thumbs_up_total %>
-        <% end %> &nbsp&nbsp&nbsp&nbsp
-        <%= link_to like_recipe_path(@recipe, like: false), method: :post do %> 
-          <i class="glyphicon glyphicon-thumbs-down"></i> &nbsp <%= @recipe.thumbs_down_total %>
-        <% end %>
+          <tr>
+            <% if @recipe.ingredients.any? %>
+            <td class="shortrow">
+              <strong>Ingredients:</strong>
+            </td>
+            <td class="longrow">
+              <% @recipe.ingredients.each do |ing| %>
+                &bull; <%= link_to ing.name, ing %>
+              <% end %> &bull;
+            </td>
+            <% end %>
+          </tr>
+        </table>
       </div>
+      
+      <h5><%= link_to "Return to Recipes Listing", recipes_path, class: "btn btn-warning btn-small" %></h5>
+      
+      <% if logged_in? and (@recipe.chef == current_user || current_user.admin?) %>
+        <%= link_to "Edit Recipe", edit_recipe_path(@recipe), class: "btn btn-success btn-small" %>
+      <% end %>
+    </div>
+  
+    
+    <div class="col-md-7">
+      
+      <% if logged_in? and current_user.admin? %>
+        <%= link_to "[Delete Recipe]", @recipe, method: :delete, data: { confirm: "Are you sure you want to delete this recipe?" } %>
+      <% end %>
+      <% if @recipe.picture? %>
+      <div class="show_recipe center img-responsive">
+        <%= image_tag(@recipe.picture.url, class:"gravatar") %>
+      </div>
+      <% end %>
+      <div class="well">
+        <p>
+          <strong>Steps: </strong>
+        </p>
+        <%= simple_format(@recipe.description) %>
+        <div class="pull-right">
+          <%= link_to like_recipe_path(@recipe, like: true), method: :post do %>
+            <i class="glyphicon glyphicon-thumbs-up"></i> <%= @recipe.thumbs_up_total %>
+          <% end %> &nbsp|&nbsp
+          <%= link_to like_recipe_path(@recipe, like: false), method: :post do %> 
+            <i class="glyphicon glyphicon-thumbs-down"></i> <%= @recipe.thumbs_down_total %>
+          <% end %>
+        </div>
+      </div>
+  
+      <% if logged_in? %>
+        <h3><br/>Reviews</h3>
+        <% if @recipe.reviews.any? %>
+          <% @recipe.reviews.each do |c| %>
+          <div class="row">
+            <div class="review col-md-12">
+              <div class="col-md-2 pull-left center">
+                <%= link_to gravatar_for(c.chef, size: 85), chef_path(c.chef) %>
+              <strong><%= c.chef.chefname.downcase.capitalize %> </strong>
+              </div>
+              
+              <div class="well col-md-10 pull-right">  
+                <p> <%= c.body %> </p>
+                <i><small><%= c.updated_at.strftime("%m/%d/%Y") %></small></i>
+                
+                <% if c.chef == current_user %>
+                  <%= link_to "Delete Review", review_recipe_path(:revid => c.id), class:"btn btn-danger btn-small pull-right", method: :delete, data: { confirm: "Are you sure you want to delete this review?" }  %>
+                <% end %>
+                
+              </div>
+            </div>
+          </div>
+          <% end %>
+        <% else %>
+        <h5>Be the first to post a review!</h5>
+        <% end %>
+        
+          <div class="form-group">
+            <%= form_tag(review_recipe_path, :method=>'post') do %>
+              <%= text_area_tag "body", nil, size:"5x5",  class:"form-control" %>
+              <%= submit_tag "Submit Review", class: "btn btn-primary" %> <br/><br/>
+          </div>
+            <% end %>
+        
+      <% else %>
+        <%= link_to "Login", login_path %> or <%= link_to "register", register_path %> to see reviews
+      <% end %>
     </div>
   </div>
 </div>
 
-<h5><%= link_to "Return to Recipes Listing", recipes_path, class: "btn btn-warning btn-small" %></h5>
+
+
